--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "version": "0.1.0",
     "private": true,
     "devDependencies": {
+        "@babel/cli": "^7.16.0",
+        "@babel/core": "^7.16.5",
+        "@babel/node": "^7.16.5",
+        "@babel/preset-env": "^7.16.5",
         "@wdio/cli": "^7.16.12",
         "@wdio/local-runner": "^7.16.12",
         "@wdio/mocha-framework": "^7.16.11",
