--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "axios": "^0.24.0",
+        "chai": "^4.3.4",
         "express": "^4.17.2",
         "form-data": "^4.0.0",
         "node-fetch": "^3.1.0",
