fix random text generator

--- a/config.json
+++ b/config.json
@@ -10,5 +10,6 @@
   },
   "image": "images/image.png",
   "defaultTimeoutTime": 5000,
+  "defaultRandomMessageLength": 7,
   "defaultTestMessage": "aqa: defaultTestMessage"
 }
