--- a/config.json
+++ b/config.json
@@ -9,7 +9,8 @@
     "v": "5.131",
     "baseUrl": "https://api.vk.com"
   },
-  "image": "images/image.png",
+  "image": "./images/image.png",
+  "iamgeToSave": "./images/wdio.png",
   "defaultTimeoutTime": 5000,
   "defaultRandomMessageLength": 7,
   "defaultTestMessage": "aqa: defaultTestMessage"
