--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "chai": "^4.3.4",
         "express": "^4.17.2",
         "form-data": "^4.0.0",
+        "jimp": "^0.16.1",
         "node-fetch": "^3.1.0",
         "request": "^2.88.2",
         "unirest": "^0.6.0"
